--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ text-decoration: none;
     gap: 5px;
 }
 .images__item {
-    width: 500px !important;
+    max-width: 560px !important;
 }
 @media (min-width: 600px) {
     .info {
