--- a/style.css
+++ b/style.css
@@ -141,6 +141,10 @@ text-decoration: none;
 }
 .images__item {
     max-width: 560px !important;
+    transition: all 0.3s;
+}
+.images__item:hover {
+    transform: scale(1.01);
 }
 .header__links {
     display: flex;
@@ -148,6 +152,12 @@ text-decoration: none;
     align-items: center;
     list-style-type: none;
     column-gap: 20px;
+}
+.header__links li {
+    transition: all 0.3s;
+}
+.header__links li:hover {
+    transform: scale(1.05);
 }
 @media (min-width: 600px) {
     .info {
