--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ html {
     height: 100%;
     padding: 0;
     margin: 0;
+    overflow-y: scroll;
 }
 body {
 
@@ -25,6 +26,8 @@ img {
 button {
     margin-top: 5px;
     padding: 5px;
+    border: 1px solid rgb(98, 98, 98);
+    border-radius: 5px;
 }
 .hide {
 display: none !important;
@@ -140,7 +143,7 @@ text-decoration: none;
     gap: 5px;
 }
 .images__item {
-    max-width: 560px !important;
+    max-width: 565px !important;
     transition: all 0.3s;
 }
 .images__item:hover {
